
iodine - http://code.kryo.se/iodine

***********************************

CHANGES:

2009-03-21: 0.5.1 "Boringo"
	- Added initial Windows support, fixes #43.
	- Added length check of autoprobe responses
	- Refactored and added unit tests
	- Added syslog logging for iodined on version and login packets
	- Fixed segfault when encoding just one block, fixes #51.
		The normal code was never affected by this.
	- Added win32 code to read DNS server from system, fixes #45.
	- Disabled password echo on win32, fixes #44.
	- Fix encoding error making all autoprobing > 1024 bytes fail, #52.
	- Increase default interface MTU to 1200.
	- Fix autoprobing error making every third probe fail, set IP flag
		Dont-Fragment where supported. Fixes #54.
	- Added TAP32 version 0901 as accepted (#53).

2009-01-23: 0.5.0 "iPassed"
	- Fixed segfault in server when sending version reject.
	- Applied patch to make iodine build on BeOS R5-BONE and Haiku,
		from Francois Revol. Still work to do to get tun device working.
	- Added capability to forward DNS queries outside tunnel domain to
		a nameserver on localhost. Use -b port to enable, fixes #31.
	- iodined now replies to NS request on its own domain, fixes issue #33.
		The destination IP address is sent as reply. Use -n to specify
		a specific IP address to return (if behind NAT etc).
	- Upstream data is now Base64 encoded if relay server preserves case and
		supports the plus (+) character in domain names, fixes #16.
	- Fixed problem in client when DNS trans. ID has highest bit set (#37)
	- IP addresses are now assigned within the netmask, so iodined can
		use any address for itself, fixes #28.
	- Netmask size is now adjustable. Setting a small net will reduce the
		number of users. Use x.x.x.x/n notation on iodined tunnel ip.
		This fixes #27.
	- Downstream data is now fragmented, and the fragment size is auto-
		probed after login. Fixes #7. It only took a few years :)
	- Enhanced the checks that validates incoming packets